--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@400;700&family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300;1,400;1,600&display=swap');
+
+:root{
+  --cream:#fefbe9;
+  --light_orange: #f6c453;
+  --dark_orange: #f0a04b;
+  --light_green: #e1eedd;
+  --dark_green: #183a1d;
+}
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+#root, .App{
+  width: 100%;
+}
+.App{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+body{
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+/*******Nav styles*******/
+.Nav_wrapper{
+  background-color: var(--light_green);
+  padding: 1rem 0;
+  overflow: hidden;
+  height: 60px;
 }
+.Nav_wrapper,.Nav_content{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.Nav_content{
+  justify-content: space-around;
+  width: 90%;
+  
+}
+.he, .codes{
+  font-family: 'Oleo Script Swash Caps', cursive;
+  font-size: 2rem;
+}
+.he{
+  color: var(--dark_green);
+}
+.codes{
+  color: var(--cream);
+  text-shadow: 2px 4px 5px var(--dark_green);
+}
+.Nav_ul{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.link_wrapper{
+  position: relative;
+  width: 150px;
+  margin: 0 .5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.link_underline{
+  position: absolute;
+  bottom: -13px;
+  height: 20px;
+  width: 0;
+  background-color: var(--dark_green);
+  transition: all .5s ease;
+}
+.links{
+  text-decoration: none;
+  color:  var(--dark_green);
+  padding: 15% 1rem;
+  width: 150px;
+  text-align: center;
+  margin: 0 10px;
+  position: relative;
+}
+.links:hover ~.link_underline{
+  width: 120px;
+}
+.other_nav_menu{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.other_nav_menu p{
+  padding: 0 1rem;
+  cursor: pointer;
+}
+.cart_div{
+  display: flex;
+  position: relative;
+  margin-right: 1rem;
+  color: var(--dark_green);
+  cursor: pointer;
+
+}
+.cart{
+  font-size: 1.8rem;
+}
+.cart_value{
+  position: absolute;
+  font-size: .6rem;
+  bottom: -5px;
+  right: -20px;
+  font-weight: bolder;
+}
+
