--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
   --light_orange: #f6c453;
   --dark_orange: #f0a04b;
   --light_green: #e1eedd;
+  --blur_green: #e1eeddb5;
   --dark_green: #183a1d;
-
-  --medium_green: #5b8962;
+  --medium_green: #aabbac;
   --light_brown: #e5d3ba;
 }
 *{
@@ -25,6 +25,9 @@
   justify-content: center;
   flex-direction: column;
 }
+.routes{
+  flex-grow: 1;
+}
 body{
   font-family: 'Poppins', sans-serif;
   width: 100%;
@@ -34,11 +37,14 @@ body{
 
 /*******Nav styles*******/
 .Nav_wrapper{
-  background-color: var(--light_green);
+  background-color: var(--blur_green);
   padding: 1rem 0;
   height: 60px;
   z-index: 10;
   position: relative;
+  position: sticky;
+  top: 0;
+  backdrop-filter: blur(15px);
 }
 .Nav_wrapper,.Nav_content{
   width: 100%;
@@ -428,6 +434,60 @@ padding: .5rem 10px;
 }
 
 
+
+
+/****Error Page****/
+
+.error_main{
+  height: 85vh;
+  align-items: flex-start;
+}
+._404 div{
+  font-size:7rem;
+  letter-spacing: 1rem;
+  font-weight: bolder;
+  display: inline-block;
+}
+.error1, .error2, .error3{
+  animation: flip 2s forwards;
+  opacity: 0;
+  transform: translateY(-50px) perspective(250px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+.error1{
+  animation-delay: .7s;
+}
+.error2{
+  animation-delay: 1.2s;
+}
+.error3{
+  animation-delay: 1.7s;
+}
+
+.error_text{
+  text-align: center;
+  animation: up 2s forwards;
+  animation-delay: 1.8s;
+  opacity: 0;
+  transform: translateY(50px);
+}
+@keyframes up {
+  100%{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+
+@keyframes flip {
+  100%{
+    opacity: 1;
+    transform: translateY(0) perspective(250px) rotateX(0deg) rotateY(360deg) rotateZ(0deg);
+  }
+}
+
+
+
+
 /***FOOTER***/
 
 footer{
@@ -456,7 +516,6 @@ footer p{
 
 @media screen and (max-width:950px) {
   .Nav_content{
-    background-color: var(--light_green);
     width: 100%;
     padding: 0 3rem;
   }
@@ -535,7 +594,6 @@ footer p{
   }
   .site_description > p{
     font-size: 1rem;
-    opacity: .9;
     line-height: 2rem;
   }
   .featured_product{
@@ -547,9 +605,20 @@ footer p{
   .best_selling{
     left: 20%;
   }
-
+  .core_value{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 1rem;
+    width: 95%;
+  }
   .core_value h2{
     font-size: 1.7rem;
+    text-align: center;
+  }
+  .core_value p{
+    width: 100%;
+    text-align: center;
   }
   .all_value{
     height: min-content;
