finalizing my project

--- a/src/index.css
+++ b/src/index.css
@@ -263,7 +263,7 @@ a{
 
 }
 .parent{
-  padding: 3rem 0;
+  padding: 6rem 0;
   width: 100%;
   align-items: center;
 }
@@ -633,7 +633,7 @@ padding: .5rem 10px;
   display: flex;
   justify-content: space-between;
   gap: 2rem;
-  padding: 2.8rem 0;
+  padding: 6rem 0;
   width: 80%;
 }
 .img_item, .item_details{
@@ -694,38 +694,53 @@ padding: .5rem 10px;
 
 /*** Cart ***/
 .myCart{
-  height: 80vh;
-  width: 25%;
-  position: fixed;
-  padding: 1rem;
-  top: 70px;
-  right: -100%;
-  z-index: 5;
-  background-color: #fff;
-  filter: drop-shadow(1px 1px 5px gray);
+  height: 90vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   text-align: center;
-  opacity: 0;
-  border-radius: 10px;
-  transition: 1s ease;
 }
-.showCart{
-  top: 70px;
-  right: 30px;
-  opacity: 1;
+
+.myCart_container{
+  width: 100%;
+}
+.cart_item_parent{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: .5rem 0;
 }
 .myCart h2{
   margin-top: 1rem;
 }
 .cart_content_div{
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   overflow-y: scroll;
+  width: 100%;
+}
+.cart_items{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
   width: 90%;
-  height: 80%;
+}
+.cart_item_header{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.bxs-trash-alt{
+  font-size: 1.7rem;
+  color: rgb(208, 113, 113);
+  cursor: pointer;
+}
+.cart_items img{
+  width: 100px;
+  height: 100px;
 }
 
 /***FOOTER***/
@@ -930,16 +945,15 @@ footer p{
     width: 300px;
     height: 300px;
   }
-  .myCart{
-    height: 80vh;
-    width: 100%;
-    position: fixed;
+  .cart_items img{
+    width: 60px;
+    height: 60px;
   }
-  .showCart{
-    top: 70px;
-    right: 0px;
-    opacity: 1;
+  
+  .item_cart_name{
+    display: none;
   }
+ 
   
 }
 
